--- a/pytest.ini
+++ b/pytest.ini
@@ -1,8 +1,10 @@
 [pytest]
 markers =
-    asyncio: mark test as async/await test
+    memory: testy zużycia pamięci
+    benchmark: testy wydajności
+    integration: testy integracyjne
+    asyncio: testy asynchroniczne
     performance: mark test as a performance test
-    integration: mark test as an integration test
     unit: mark test as a unit test
     slow: mark test as a slow test
     fast: mark test as a fast test
